// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Disabled variants should render disabled button component contained 1`] = `
<TouchableHighlight
  activeOpacity={0.8}
  disabled={false}
  onPress={[Function]}
  size="medium"
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 42,
        "minHeight": 48,
      },
      Object {
        "shadowColor": "#AEAEAE",
      },
    ]
  }
  testID="button"
  type="contained"
  underlayColor="#BABABA"
>
  <Text
    accessibilityRole="button"
    disabled={false}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#F4F4",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": 1,
        },
      ]
    }
    textColor="default"
    type="contained"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`Button component Disabled variants should render disabled button component outlined 1`] = `
<TouchableHighlight
  activeOpacity={0.8}
  disabled={true}
  onPress={[Function]}
  size="medium"
  style={
    Array [
      Object {
        "borderColor": "#FAFAEA",
        "borderRadius": 42,
        "borderWidth": 1,
        "minHeight": 48,
      },
      Object {},
    ]
  }
  testID="button"
  type="outlined"
  underlayColor="#BABABA"
>
  <Text
    accessibilityRole="button"
    disabled={true}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FAFAEA",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": 1,
        },
      ]
    }
    textColor="default"
    type="outlined"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`Button component Disabled variants should render disabled button component text 1`] = `
<TouchableHighlight
  activeOpacity={0.8}
  disabled={true}
  onPress={[Function]}
  size="medium"
  style={
    Array [
      Object {
        "borderRadius": 42,
        "minHeight": 48,
      },
      Object {},
    ]
  }
  testID="button"
  type="text"
  underlayColor="#BABABA"
>
  <Text
    accessibilityRole="button"
    disabled={true}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FAFAEA",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": 1,
        },
      ]
    }
    textColor="default"
    type="text"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`Button component Variants should render button component contained 1`] = `
<TouchableHighlight
  activeOpacity={0.8}
  disabled={false}
  onPress={[Function]}
  size="medium"
  style={
    Array [
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 42,
        "minHeight": 48,
      },
      Object {
        "shadowColor": "#AEAEAE",
      },
    ]
  }
  testID="button"
  type="contained"
  underlayColor="#BABABA"
>
  <Text
    accessibilityRole="button"
    disabled={false}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#F4F4",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": 1,
        },
      ]
    }
    textColor="default"
    type="contained"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`Button component Variants should render button component outlined 1`] = `
<TouchableHighlight
  activeOpacity={0.8}
  disabled={false}
  onPress={[Function]}
  size="medium"
  style={
    Array [
      Object {
        "borderColor": "#FFFFFF",
        "borderRadius": 42,
        "borderWidth": 1,
        "minHeight": 48,
      },
      Object {},
    ]
  }
  testID="button"
  type="outlined"
  underlayColor="#BABABA"
>
  <Text
    accessibilityRole="button"
    disabled={false}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FAF3E3",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": 1,
        },
      ]
    }
    textColor="default"
    type="outlined"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;

exports[`Button component Variants should render button component text 1`] = `
<TouchableHighlight
  activeOpacity={0.8}
  disabled={true}
  onPress={[Function]}
  size="medium"
  style={
    Array [
      Object {
        "borderRadius": 42,
        "minHeight": 48,
      },
      Object {},
    ]
  }
  testID="button"
  type="text"
  underlayColor="#BABABA"
>
  <Text
    accessibilityRole="button"
    disabled={true}
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FAFAEA",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": 1,
        },
      ]
    }
    textColor="default"
    type="text"
  >
    LABEL BUTTON
  </Text>
</TouchableHighlight>
`;
